435567: init JFreeCharts as soon as app starts
- JFreeCharts won't otherwise work with new EC2 AMIs

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -129,6 +129,10 @@
   </listener>
 
   <listener>
+		<listener-class>fi.hut.soberit.agilefant.config.InitJFreeChartsListener</listener-class>
+  </listener>
+
+  <listener>
 		<listener-class>fi.hut.soberit.agilefant.config.BootstrapperListener</listener-class>
 	</listener>
 	
